[gd_scene load_steps=12 format=2]

[ext_resource path="res://Sprites/HUD/Pecore1.png" type="Texture" id=1]
[ext_resource path="res://Sprites/HUD/Pecore2.png" type="Texture" id=2]
[ext_resource path="res://Sprites/HUD/Pecore2_Wins.png" type="Texture" id=3]
[ext_resource path="res://Sprites/HUD/Proto_Life_Points/health_bar_02.png" type="Texture" id=4]
[ext_resource path="res://Sprites/HUD/Pecore1_Wins.png" type="Texture" id=5]
[ext_resource path="res://Sprites/HUD/Proto_Restart.png" type="Texture" id=6]
[ext_resource path="res://SFX/p1_wins.wav" type="AudioStream" id=7]
[ext_resource path="res://SFX/p2_wins.wav" type="AudioStream" id=8]
[ext_resource path="res://Sprites/HUD/Proto_Life_Points/health_bar_05.png" type="Texture" id=10]
[ext_resource path="res://Scripts/HUD.gd" type="Script" id=12]
[ext_resource path="res://SFX/Cotton Eye Joe [8 Bit Tribute to Rednex] - 8 Bit Universe.wav" type="AudioStream" id=13]

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 12 )

[node name="sound_p1_wins" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="sound_p2_wins" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )

[node name="LifeP1" type="Sprite" parent="."]
position = Vector2( 87.673, 85 )
scale = Vector2( 0.483156, 0.379508 )
texture = ExtResource( 10 )

[node name="LifeP2" type="Sprite" parent="."]
position = Vector2( 1157, 85 )
scale = Vector2( 0.483156, 0.379508 )
texture = ExtResource( 4 )

[node name="Name1" type="Sprite" parent="."]
position = Vector2( 120, 30 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="Name2" type="Sprite" parent="."]
position = Vector2( 1158, 30 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )

[node name="P1_Wins" type="Sprite" parent="."]
position = Vector2( 640, 296 )
texture = ExtResource( 5 )

[node name="P2_Wins" type="Sprite" parent="."]
position = Vector2( 640, 296 )
texture = ExtResource( 3 )

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Restart_Btn" type="Button" parent="Control"]
margin_left = 528.0
margin_top = 464.0
margin_right = 754.0
margin_bottom = 550.0
icon = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Control/Restart_Btn" to="." method="_on_Restart_Btn_pressed"]
